# simple-cv

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.js  package-lock.json  package.json  tests.js
lib/: Rect.js
src/: Matrix.h  async.h  colorTemperature.h  constants.h  convertColor.h  decodeImage.h  drawLine.h  drawRectangle.h  encodeImage.h  flipLeftRight.h  flipUpDown.h  gaussianBlur.h  lookup.h  merge.h  readImage.h  resize.h  rotationMatrix.h  showImage.h  simple-cv.cpp  split.h  utils.h  waitKey.h  warpAffine.h  writeImage.h
